--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula04 Exercicio 01 curso JavaScript do CEV</title>
+    <style>
+        body{
+            background-color: rgb(39, 44, 73);
+            color: white;
+            font: normal 20pt Arial;
+        }
+    </style>
 </head>
 <body>
+    <h1>Olá, Mundo!</h1>
+    <p>Já Estou livre da Maldição!</p>
     <script>
-        alert("Olá Mundo");
+        window.alert("A Minha Primeira linguagen")
     </script>
 </body>
 </html>
