--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -16,7 +16,7 @@
     <h1>Olá, Mundo!</h1>
     <p>Já Estou livre da Maldição!</p>
     <script>
-        window.alert("A Minha Primeira linguagen")
+        alert("A Minha Primeira linguagen")
     </script>
 </body>
 </html>
