--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -22,6 +22,12 @@
         alert("A Minha Primeira linguagen");
         window.confirm("Está a gostar do curso de JavaScript?");
         window.prompt("Qual é o seu nome?");
+        //comentário de uma linha
+        /* inicio de
+         Comentário 
+         para 
+         várias linhas
+        */
     </script>
 </body>
 </html>
