--- a/Aula06/ex002.html
+++ b/Aula06/ex002.html
@@ -11,17 +11,18 @@
             font: normal 20pt Arial;
         }
         h1{
-            color: tomato;
+            color: tomato;/* Comentário em CSS*/
         }
     </style>
 </head>
 <body>    
     <h1>Olá, Mundo!</h1>
     <p>Já Estou livre da Maldição!</p>
+    <!-- Comentário em HTMl-->
     <script>
         
-        window.prompt("Qual é o seu nome?");
-        
+        var nome = window.prompt('Qual é o seu nome?');
+        alert('Seja bem vindo ' + nome + '!');
     </script>
 </body>
 </html>
