aula06 - conversao string number

--- a/Aula06/ex003.html
+++ b/Aula06/ex003.html
@@ -33,12 +33,11 @@
 
 
         var soma = num1 + num2;
-        window.alert ('A soma dos valores '+ num1 + 'com' + num2 +'é: '  + soma);
+        window.alert ('A soma dos valores '+ num1 + ' com ' + num2 +' é: '  + soma);
        
         //Utilização da conversão por number <- ************* ->
         var soma2 = num2 + num3;
-
-        window.alert ('A soma de' + num2 'com' + num3 + 'é: '+ soma2);
+        window.alert ('A soma de ' + num2 + ' com ' + num3 + ' é: '+ soma2);
 
         // (número + número) adição
         // (string + string) para concatenação        
