--- a/Aula07/ex005.html
+++ b/Aula07/ex005.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        var soma, subt, mult, div, restdiv, expon;
+        var soma, subt, mult, div, restdiv, expon, complexa;
         var num1 = 2;
         var num2 = 3;
         soma = num1 + num2;//Soma de dois valores
@@ -16,13 +16,14 @@
         div = num2 / num1;//divisão de dois valores
         restdiv = num2 % num1;//resto inteiro de uma divisão
         expon = num1 ** num2;//Exponnencial
-
+        complexa = num2 + num2/num1;//precedencia de operações
         document.writeln(`A soma de ${num1} com ${num2} tem o valor de: ${soma}<br>`);
         document.writeln(`Subtração de ${num2} por ${num1} tem o valor ${subt}<br>`);
         document.writeln(`Multiplicação ${num1} por ${num2} tem o valor ${mult}<br>`);
         document.writeln(`Divição de ${num2} pelo ${num1}tem o Valor ${div}<br>`);
         document.writeln(`Resto da divisão Inteira de ${num2} pelo ${num1} tem o valor de ${restdiv}<br>`);
         document.writeln(`${num1} elevado a ${num2} tem o valor de ${expon}<br>`);
+        document.writeln(`Operação com precedencia de operações com a soma de ${num2} com ${num2} com a divisão por ${num1} (A+A/B) tem o valor de ${complexa}`);
 
     </script>
 </body>
