--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -23,7 +23,14 @@
         document.writeln(`Divição de ${num2} pelo ${num1}tem o Valor ${div}<br>`);
         document.writeln(`Resto da divisão Inteira de ${num2} pelo ${num1} tem o valor de ${restdiv}<br>`);
         document.writeln(`${num1} elevado a ${num2} tem o valor de ${expon}<br>`);
-        document.writeln(`Operação com precedencia de operações com a soma de ${num2} com ${num2} com a divisão por ${num1} (A+A/B) tem o valor de ${complexa}`);
+        document.writeln(`Operação com precedencia de operações com a soma de ${num2} com ${num2} com a divisão por ${num1} (A+A/B) tem o valor de ${complexa}<br>`);
+        document.writeln('Atribuição Simples<br>');
+        var a = 5*3;
+        var b = a%5;
+        var c = 5*b**2;
+        var d = 10-a/2;
+        var e = 6*2/d;
+        var f = b%e + 4/e;
 
     </script>
 </body>
