--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -31,7 +31,8 @@
         var d = 10-a/2;
         var e = 6*2/d;
         var f = b%e + 4/e;
-
+        document.writeln(`A multiplica de 5x3=${a}<br>`);
+        document.writeln(`O resto da divisão de ${a}por5=${2}<br>`);
     </script>
 </body>
 </html>
