--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -24,15 +24,20 @@
         document.writeln(`Resto da divisão Inteira de ${num2} pelo ${num1} tem o valor de ${restdiv}<br>`);
         document.writeln(`${num1} elevado a ${num2} tem o valor de ${expon}<br>`);
         document.writeln(`Operação com precedencia de operações com a soma de ${num2} com ${num2} com a divisão por ${num1} (A+A/B) tem o valor de ${complexa}<br>`);
-        document.writeln('Atribuição Simples<br>');
+        document.writeln('<br>Atribuição Simples<br>');
         var a = 5*3;
         var b = a%5;
         var c = 5*b**2;
         var d = 10-a/2;
         var e = 6*2/d;
         var f = b%e + 4/e;
-        document.writeln(`A multiplica de 5x3=${a}<br>`);
-        document.writeln(`O resto da divisão de ${a}por5=${2}<br>`);
+        document.writeln(`A multiplica de 5x3 = ${a}<br>`);
+        document.writeln(`O resto da divisão de ${a} por 5 = ${b}<br>`);
+        document.writeln(`O valor da Operação 5*${b}**2 = ${c}<br>`);
+        document.writeln(`O valor da Operação 10-${a}/2 = ${d}<br>`);
+        document.writeln(`O valor da operação 6*2/${d} = ${e}<br>`);
+        document.writeln(`O valor de ${b}%${e}+4/${e} = ${f}`);
+
     </script>
 </body>
 </html>
