--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -24,20 +24,36 @@
         document.writeln(`Resto da divisão Inteira de ${num2} pelo ${num1} tem o valor de ${restdiv}<br>`);
         document.writeln(`${num1} elevado a ${num2} tem o valor de ${expon}<br>`);
         document.writeln(`Operação com precedencia de operações com a soma de ${num2} com ${num2} com a divisão por ${num1} (A+A/B) tem o valor de ${complexa}<br>`);
+        
         document.writeln('<br>Atribuição Simples<br>');
-        var a = 5*3;
+        var a = 5+3;
         var b = a%5;
         var c = 5*b**2;
         var d = 10-a/2;
         var e = 6*2/d;
         var f = b%e + 4/e;
-        document.writeln(`A multiplica de 5x3 = ${a}<br>`);
+        document.writeln(`O valor de 5+3 = ${a}<br>`);
         document.writeln(`O resto da divisão de ${a} por 5 = ${b}<br>`);
         document.writeln(`O valor da Operação 5*${b}**2 = ${c}<br>`);
         document.writeln(`O valor da Operação 10-${a}/2 = ${d}<br>`);
         document.writeln(`O valor da operação 6*2/${d} = ${e}<br>`);
         document.writeln(`O valor de ${b}%${e}+4/${e} = ${f}`);
+        
+        //document.writeln('<br>Auto-atribuições<br>');
+        var n = 3;
+        n = n+4;//  ou n+=4;
+        n = n-5;//  ou n -=5;
+        n = n*4;//  ou n*=4; 
+        n = n/2;//  ou n/=2;
+        n = n**2;// ou n**=2; 
+        n = n%5;// oun%=5;
 
+        //document.write('Incremento');
+        var x=5;
+        x = x+1;// ou x+;  incremento 
+        x = x-1;// ou x--; decremento
+        x++;//x+=1; ou x = x+1;
+        x--;//x-=1; ou x = x-1;
     </script>
 </body>
 </html>
