--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -40,6 +40,7 @@
         document.writeln(`O valor de ${b}%${e}+4/${e} = ${f}`);
         
         //document.writeln('<br>Auto-atribuições<br>');
+        //Linhas adicionadas para estudo
         var n = 3;
         n = n+4;//  ou n+=4;
         n = n-5;//  ou n -=5;
