--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <script>
+      
+        //Aula7 do curso de javascript do CEV Operadores parte 1
+          //Curso em Video de JavaScript
         var soma, subt, mult, div, restdiv, expon, complexa;
         var num1 = 2;
         var num2 = 3;
