--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-      
+        
         //Aula7 do curso de javascript do CEV Operadores parte 1
           //Curso em Video de JavaScript
         var soma, subt, mult, div, restdiv, expon, complexa;
@@ -20,6 +20,7 @@
         restdiv = num2 % num1;//resto inteiro de uma divisão
         expon = num1 ** num2;//Exponnencial
         complexa = num2 + num2/num1;//precedencia de operações
+        document.write('<h1>Operadores Parte 1 - Aritméticos e de atribuição</h1><br>');
         document.writeln(`A soma de ${num1} com ${num2} tem o valor de: ${soma}<br>`);
         document.writeln(`Subtração de ${num2} por ${num1} tem o valor ${subt}<br>`);
         document.writeln(`Multiplicação ${num1} por ${num2} tem o valor ${mult}<br>`);
