aula07 - Operadores - parte 1

--- a/Aula07/ex005a.html
+++ b/Aula07/ex005a.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         
-        //Aula7 do curso de javascript do CEV Operadores parte 1
+        //Aula7 do curso de JavaScript do CEV Operadores parte 1
           //Curso em Video de JavaScript
         var soma, subt, mult, div, restdiv, expon, complexa;
         var num1 = 2;
