aula04 - Primeiro programa

--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -19,7 +19,7 @@
     <h1>Olá, Mundo!</h1>
     <p>Já Estou livre da Maldição!</p>
     <script>
-        alert("A Minha Primeira linguagen");
+        alert("A Minha Primeira linguagem");
         window.confirm("Está a gostar do curso de JavaScript?");
         window.prompt("Qual é o seu nome?");
         //comentário de uma linha
