Aula09 - Estudos em DOM

--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiros passos </title>
+    <style>
+        body{
+            background-color: rgba(127, 255, 212, 0.356);
+            font:normal 18pt Arial;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Iniciando Estudos em DOM</h1>
+    <p>Aqui vai o resultado</p>
+    <p>Aprendender a utilizar o <strong>DOM</strong> am JavaScript</p>
+    <p>DOM é o acrónimo de :<br><br><strong>D</strong>ocument<br><strong>O</strong>bject<br><strong>M</strong>odel<br></p>
+    <div>Clique em mim</div>
+    <script>
+        
+    </script>
 </body>
 </html>
