--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -49,6 +49,8 @@
 
         document.write('<br>Seleção por class: document.getElementsByClassName<br>');
 
+        document.write('<br>Seleção por Selector:<br>querySelector()<br>querySelector()All');
+
         
     </script>
 </body>
