--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -56,6 +56,7 @@
         d4.style.background = 'blue';
         d4.innerText= 'No Canal do Curso em Video';
 
+        document.write('<br><br>Na Utilização do document.querySelector()<br> div#msg3 seleção por ID<br>div.msg3 seleção por class');
     </script>
 </body>
 </html>
