--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -16,10 +16,10 @@
     <p>Aqui vai o resultado</p>
     <p>Aprendender a utilizar o <strong>DOM</strong> am JavaScript</p>
     <p>DOM é o acrónimo de :<br><br><strong>D</strong>ocument<br><strong>O</strong>bject<br><strong>M</strong>odel<br></p>
-    <div id="msg">Clique em mim</div>
+    <div id="msg">Estudando</div>
     <div name="msg1">JavaScript</div>
     <div class="msg2">no CEV</div>
-    <div id="msg3">do Duanabara</div>
+    <div id="msg3">com o Guanabara</div>
     <script>
         document.write('<br>Selecionando por Marca document.getElementsByTagName<br>');
         var p1 = window.document.getElementsByTagName('p')[0];
