aula10 - function entrar()
Através do onmouseenter

--- a/Aula10/ex006.html
+++ b/Aula10/ex006.html
@@ -26,7 +26,8 @@
             area.innerText='Clicou!';
         }
         function entrar(){
-            
+           var area = document.getElementById('area');
+           area.innerText="Entrei!";
         }
     </script>
 </body>
