aula 10 - function através do HTML

--- a/Aula10/ex006.html
+++ b/Aula10/ex006.html
@@ -24,14 +24,16 @@
         function clicar() {
             var area = window.document.getElementById('area');
             area.innerText='Clicou!';
+            area.style.background='red';
         }
         function entrar(){
            var area = window.document.getElementById('area');
-           area.innerText="Entrei!";
+           area.innerText='Entrei!';
         }
         function sair(){
             var area = window.document.getElementById('area');
             area.innerText='Já de Saida!';
+            area.style.background ='green';
         }
     </script>
 </body>
