--- a/Aula10/ex007.html
+++ b/Aula10/ex007.html
@@ -12,6 +12,9 @@
     <input type="button" value="Somar" onclick="somar()">
     <script>
         function somar(){
+         var txtn1 = window.document.getElementById('txtn1'); 
+         var txtn2 = window.document.querySelector('input#txtn2')
+         ;
             
         }
     </script>
