--- a/Aula10/ex007.html
+++ b/Aula10/ex007.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando Números</title>
+    
 </head>
 <body>
     <h1>Somando Valores</h1>
     <input type="number" name="txtn1" id="txtn1"> <strong>+</strong>
     <input type="number" name="txtn2" id="txtn2">
     <input type="button" value="Somar" onclick="somar()">
+    <div id="res">Resultado</div>
     <script>
         function somar(){
          var txtn1 = window.document.getElementById('txtn1'); 
          var txtn2 = window.document.querySelector('input#txtn2')
          ;
-            
+         var res = window.document.getElementById('res');
+         var n1 = Number(txtn1.value);
+         var n2 = Number(txtn2.value);
+         var soma = n1 + n2;  
+         res.innerHTML = `A soma ${n1} com ${n2} tem o resultado de ${soma}`; 
         }
     </script>
 </body>
