--- a/Aula10/ex007.html
+++ b/Aula10/ex007.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando Números</title>
-    
+    <style>
+        body{
+            font: normal 20pt Arial;
+        }
+        input{
+            font: normal 20pt Arial;
+            width: 100px;
+        }
+        div#res{
+            margin-top: 35px;
+        }
+    </style>
 </head>
 <body>
     <h1>Somando Valores</h1>
@@ -21,7 +32,7 @@
          var n1 = Number(txtn1.value);
          var n2 = Number(txtn2.value);
          var soma = n1 + n2;  
-         res.innerHTML = `A soma ${n1} com ${n2} tem o resultado de ${soma}`; 
+         res.innerHTML = `O Resultado da soma de ${n1} com ${n2} é igual a <strong>${soma}</strong>`; 
         }
     </script>
 </body>
