--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <h1>Iniciando Estudos em DOM</h1>
+    <h1>Iniciando Estudos em DOM!</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendender a utilizar o <strong>DOM</strong> am JavaScript</p>
     <p>DOM é o acrónimo de :<br><br><strong>D</strong>ocument<br><strong>O</strong>bject<br><strong>M</strong>odel<br></p>
