--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -16,7 +16,7 @@
     <p>Aqui vai o resultado</p>
     <p>Aprendender a utilizar o <strong>DOM</strong> am JavaScript</p>
     <p>DOM é o acrónimo de :<br><br><strong>D</strong>ocument<br><strong>O</strong>bject<br><strong>M</strong>odel<br></p>
-    <div id="msg">Estudando</div>
+    <div id="msg">Estou a estudar</div>
     <div name="msg1">JavaScript</div>
     <div class="msg2">no CEV</div>
     <div id="msg3">com o Guanabara</div>
