--- a/Aula11/desafioex009.html
+++ b/Aula11/desafioex009.html
@@ -17,17 +17,31 @@
 <body>
     <h1>Verificador de Nacionalidade</h1>
     <p>Verificação se é Português ou estrangeiro</p>
-    Qual é o seu Pais: <input type="text" name="txtpais" id="txtpais" value="">
+   <!-- Qual é o seu País: <input type="text" name="txtpais" id="txtpais" value="">
+    <input type="button" value="Selecionar" onclick="verifica()"> -->
+   Qual é o seu País: <select id="selpais">  
+        <option value="Angola">Angola</option>     
+        <option value="Brasil">Brasil</option>
+        <option value="Espanha">Espanha</option>
+        <option value="EUA">EUA</option>
+        <option value="Malta">Malta</option> 
+        <option value="Portugal">Portugal</option>
+        <option value="Qatar">Qatar</option>   
+        <option value="Reino Unido">Reino Unido</option>
+        <option value="Rússia">Rússia</option> 
+        <option value="Suécia">Suécia</option>  
+        <option value="Sérvia">Sérvia</option>
+      </select>
     <input type="button" value="Selecionar" onclick="verifica()">
     <div id="naci">
 
     </div>
     <script>
         function verifica() {
-            var txtpais = window.document.getElementById('txtpais').value;       
+            var txtpais = window.document.getElementById('selpais').value;       
             var naci = document.getElementById('naci');
             naci.innerHTML = `<p>O seu Pais é <strong>${txtpais}</strong></p>`;
-            if (txtpais == 'Portugal' || txtpais == 'portugal'){
+            if (txtpais == 'Portugal'){
                 naci.innerHTML += `<p>Você é Português</p>`;
             }else{
                 naci.innerHTML += '<p>Você é Estrageiro</p>';
