--- a/Aula12_Ex/modelo.html
+++ b/Aula12_Ex/modelo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Exercicio!</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
     
     <section>
         <div>
-
+            testando
         </div>
         <div>
 
