Exercicio - Aula12 - Modelo

--- a/Aula12_Ex/modelo.html
+++ b/Aula12_Ex/modelo.html
@@ -16,12 +16,13 @@
             testando
         </div>
         <div>
-
+            Olá!
         </div>
     </section>
 
     <footer>
-
+        <p>&copy; CursoemVideo</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
