Exercicio Aula12 - IMGS e fundo Dinâmicos

--- a/Aula12_Ex/ex014/modelo.html
+++ b/Aula12_Ex/ex014/modelo.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do Dia!</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo.css"><!-- Ligação á ficheiro css Estilo da página-->
 </head>
-<body onload="carregar()">
+<body onload="carregar()"><!--onload carrega o ficheiro de javascript -->
     <header>
         <h1>Hora do Dia!</h1>
     </header>
@@ -16,7 +16,7 @@
             Aqui vai aparecer a mensagem...
         </div>
         <div id="foto">
-            <img id="imagem" src="imgs/manha.png" alt="Foto do dia">
+            <img id="imagem" src="imgs/manha.png" alt="Foto da Hora dia">
         </div>
     </section>
 
