Exercicio -  Aula12 - IMGs e Fundo Dinâmico

--- a/Aula12_Ex/ex014/modelo.html
+++ b/Aula12_Ex/ex014/modelo.html
@@ -21,8 +21,8 @@
     </section>
 
     <footer>
-        <p>&copy; CursoemVideo</p>
+        <p>&copy; CursoEmVideo</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js"></script><!--A ligação é feita a um ficheiro extreno ao html -->
 </body>
 </html>
