--- a/Aula12_Ex/ex015/modelo.html
+++ b/Aula12_Ex/ex015/modelo.html
@@ -15,7 +15,16 @@
     <section>
         <div>
             <p>Ano de nascimento:
-                
+                <input type="number" min="0" id="txtano" name="txtano">
+            </p>
+            <p>
+                <input type="radio" name="radsex" id="masc" checked>
+                <label for="masc">Masculino</label>
+                <input type="radio" name="radsex" id="fem">
+                <label for="fem">Feminino</label>
+            </p>
+            <p>
+                <input type="button" value="Validar">
             </p>
         </div>
         <div id="result">
