Exercicio - aula12 - Página HTML

--- a/Aula12_Ex/ex015/modelo.html
+++ b/Aula12_Ex/ex015/modelo.html
@@ -24,11 +24,11 @@
                 <label for="fem">Feminino</label>
             </p>
             <p>
-                <input type="button" value="Validar">
+                <input type="button" value="Validar" onclick="validar()">
             </p>
         </div>
         <div id="result">
-            
+            Preencha os dados acima para ver o Resultado!
         </div>
     </section>
 
