Exercicio - Aula14 - ciclos de repetição

--- a/Aula14EX/ex016/modelo.html
+++ b/Aula14EX/ex016/modelo.html
@@ -13,10 +13,16 @@
     
     <section>
         <div>
-            testando
+            <!-- 
+                Inicio: 1 
+                Fim: 10 
+                Passo: 1
+                Botão de contar
+             -->
+           
         </div>
         <div>
-            Olá!
+            Preparando a Contagem....
         </div>
     </section>
 
