--- a/Aula14EX/ex016/modelo.html
+++ b/Aula14EX/ex016/modelo.html
@@ -19,9 +19,23 @@
                 Passo: 1
                 Botão de contar
              -->
-           
+            <p>
+                <label for="txtini">Inicio:</label>
+                <input type="number" name="txtini" id="txtini">
+            </p>
+            <p>
+                <label for="txtfim">Fim:</label>
+                <input type="number" name="txtfim" id="txtfim">
+            </p>
+            <p>
+                <label for="txtpasso">Passo:</label>
+                <input type="number" name="txtpasso" id="txtpasso">
+            </p>
+            <p>
+                <input type="button" name="btcontar" id="btcontar" value="Contar" onclick="contar()">
+            </p>
         </div>
-        <div>
+        <div id="result">
             Preparando a Contagem....
         </div>
     </section>
