--- a/Aula06/ex002.html
+++ b/Aula06/ex002.html
@@ -20,8 +20,8 @@
     <p>Já Estou livre da Maldição!</p>
     <!-- Comentário em HTMl-->
     <script>        
-        var nome = window.prompt('Qual é o seu nome?');
-        alert('Seja bem vindo ' + nome + '!');
+        var nome = window.prompt('Qual é o seu nome?')
+        alert('Seja bem vindo ' + nome + '!')
     </script>
 </body>
 </html>
