--- a/Aula06/ex004.html
+++ b/Aula06/ex004.html
@@ -13,21 +13,21 @@
 <body>
     <script>
         var nome = window.prompt('Qual é o seu nome?');
-        document.write(`Olá <strong> ${nome}</strong> o seu nome tem ${nome.length} letras<br>`);//nome.length conta o número de letras da variavel nome
-        document.write(`O seu nome em Letras Maiúsculas ${nome.toUpperCase()}<br>`);// nome.toUpperCase() converte a string para letras Maiusculas
-        document.write(`O seu nome em letras Minúsculas ${nome.toLocaleLowerCase()}<br>`);//nome.toLocaleLowerCase() converte a string para letras Minusculas
+        document.write(`Olá <strong> ${nome}</strong> o seu nome tem ${nome.length} letras<br>`)//nome.length conta o número de letras da variavel nome
+        document.write(`O seu nome em Letras Maiúsculas ${nome.toUpperCase()}<br>`)// nome.toUpperCase() converte a string para letras Maiusculas
+        document.write(`O seu nome em letras Minúsculas ${nome.toLocaleLowerCase()}<br>`)//nome.toLocaleLowerCase() converte a string para letras Minusculas
 
         
         var num1 = 1545.5
 
-        var num2 = num1.toFixed(2);//coloca duas casas décimais
+        var num2 = num1.toFixed(2)//coloca duas casas décimais
 
-        var num3 = num1.toFixed(2).replace('.',',');// Coloca com duas casa decimais e subtitui o ponto . pela virgula ,
+        var num3 = num1.toFixed(2).replace('.',',')// Coloca com duas casa decimais e subtitui o ponto . pela virgula ,
 
-        num1 = num1.toLocaleString('pt-PT', {style: 'currency', currency: 'EUR'});// Coloca todos os valores de moeda em Euros (€)
-        document.writeln(`<br>Valor formatado Com duas casas décimais ${num2}<br>`);
-        document.writeln(`Valor formatado com Virgula no lugar do Ponto ${num3}<br>`);
-        document.writeln(`Valor Formatado em EUR: ${num1}`);
+        num1 = num1.toLocaleString('pt-PT', {style: 'currency', currency: 'EUR'})// Coloca todos os valores de moeda em Euros (€)
+        document.writeln(`<br>Valor formatado Com duas casas décimais ${num2}<br>`)
+        document.writeln(`Valor formatado com Virgula no lugar do Ponto ${num3}<br>`)
+        document.writeln(`Valor Formatado em EUR: ${num1}`)
 
     </script>
 </body>
