--- a/Aula09/ex005.html
+++ b/Aula09/ex005.html
@@ -19,44 +19,45 @@
     <div id="msg">Estou a estudar</div>
     <div name="msg1">JavaScript</div>
     <div class="msg2">no CEV</div>
-    <div id="msg3">com o Guanabara</div>
+    <div id="msg3">Com o Guanabara</div>
+
     <script>
-        document.write('<br>Selecionando por Marca document.getElementsByTagName<br>');
-        var p1 = window.document.getElementsByTagName('p')[0];
-        document.write('<br>O primeiro parágrafo Contém o seguinte: ' + p1.innerText+'<br>' );
-        p1.style.color = 'blue';//altera o estilo do paragrafo para cor de texto para azul
-        var corpo = window.document.body;
-        corpo.style.background ='black';//altera a cor de fundo através do style com DOM
-        corpo.style.color ='white';//alteração da cor de letra através do style com DOM
-        var p2 = window.document.getElementsByTagName('p')[1];
-        document.write('<br>O segundo parágrafo Contém:<br> ' + p2.innerHTML+'<br>' );
+        document.write('<br>Selecionando por Marca document.getElementsByTagName<br>')
+        var p1 = window.document.getElementsByTagName('p')[0]
+        document.write('<br>O primeiro parágrafo Contém o seguinte: ' + p1.innerText+'<br>' )
+        p1.style.color = 'blue'//altera o estilo do paragrafo para cor de texto para azul
+        var corpo = window.document.body
+        corpo.style.background ='black'//altera a cor de fundo através do style com DOM
+        corpo.style.color ='white'//alteração da cor de letra através do style com DOM
+        var p2 = window.document.getElementsByTagName('p')[1]
+        document.write('<br>O segundo parágrafo Contém:<br> ' + p2.innerHTML+'<br>' )
         //window.alert(p2.innerHTML);//Coloca também as tags filhas como o <strong></strong>
         //window.alert(p2.innerText);
 
-        document.write('<br> Seleção por ID: document.getElementById<br>');
-        var d = window.document.getElementById('msg');//selecionar a div através do ID
-        d.style.background = "green";
-        d.innerText = 'Com  professor Gustavo Guanabara ';
+        document.write('<br> Seleção por ID: document.getElementById<br>')
+        var d = window.document.getElementById('msg')//selecionar a div através do ID
+        d.style.background = "green"
+        d.innerText = 'Com  professor Gustavo Guanabara '
         
-        document.write('<br>Seleção por name: document.getElementsByName <br>');
-        var d1 = window.document.getElementsByName('msg1')[0];
-        d1.style.background='red';
-        d1.innerText='É facil Aprender a programar';
+        document.write('<br>Seleção por name: document.getElementsByName <br>')
+        var d1 = window.document.getElementsByName('msg1')[0]
+        d1.style.background='red'
+        d1.innerText='É facil Aprender a programar'
        //window.alert(d1.innerHTML);
 
-        var d3 = window.document.getElementsByClassName('msg2')[0];
-        d3.style.background='purple';
-        d3.innerText='em Javascrip. ';
+        var d3 = window.document.getElementsByClassName('msg2')[0]
+        d3.style.background='purple'
+        d3.innerText='em Javascrip. '
 
-        document.write('<br>Seleção por class: document.getElementsByClassName<br>');
+        document.write('<br>Seleção por class: document.getElementsByClassName<br>')
 
-        document.write('<br>Seleção por Selector:<br>querySelector()<br>querySelectorAll()');
+        document.write('<br>Seleção por Selector:<br>querySelector()<br>querySelectorAll()')
 
-        var d4 = window.document.querySelector('div#msg3');
-        d4.style.background = 'blue';
-        d4.innerText= 'No Canal do Curso em Video';
+        var d4 = window.document.querySelector('div#msg3')
+        d4.style.background = 'blue'
+        d4.innerText= 'No Canal do Curso em Video'
 
-        document.write('<br><br>Na Utilização do document.querySelector()<br> div#msg3 seleção por ID<br>div.msg3 seleção por class');
+        document.write('<br><br>Na Utilização do document.querySelector()<br> div#msg3 seleção por ID<br>div.msg3 seleção por class')
     </script>
 </body>
 </html>
