--- a/Aula10/ex006HTML.html
+++ b/Aula10/ex006HTML.html
@@ -20,20 +20,21 @@
     <div id="area" onclick="clicar()" onmouseenter= "entrar()" onmouseout="sair()">
         Interaja...
     </div>
+    
     <script>
         function clicar() {
-            var area = window.document.getElementById('area');
-            area.innerText='Clicou!';
-            area.style.background='red';
+            var area = window.document.getElementById('area')
+            area.innerText='Clicou!'
+            area.style.background='red'
         }
         function entrar(){
-           var area = window.document.getElementById('area');
-           area.innerText='Entrei!';
+           var area = window.document.getElementById('area')
+           area.innerText='Entrei!'
         }
         function sair(){
-            var area = window.document.getElementById('area');
-            area.innerText='Já de Saida!';
-            area.style.background ='green';
+            var area = window.document.getElementById('area')
+            area.innerText='Já de Saida!'
+            area.style.background ='green'
         }
     </script>
 </body>
