--- a/Aula10/ex006JS.html
+++ b/Aula10/ex006JS.html
@@ -20,21 +20,22 @@
     <div id="area">
         Interaja...
     </div>
+    
     <script>
-        var area = window.document.getElementById('area');
-        area.addEventListener('click', clicar);
-        area.addEventListener('mouseenter', entrar);
-        area.addEventListener('mouseout', sair);
+        var area = window.document.getElementById('area')
+        area.addEventListener('click', clicar)
+        area.addEventListener('mouseenter', entrar)
+        area.addEventListener('mouseout', sair)
         function clicar() {        
-            area.innerText='Clicou!';
-            area.style.background='red';
+            area.innerText='Clicou!'
+            area.style.background='red'
         }
         function entrar(){           
-           area.innerText='Entrei!';
+           area.innerText='Entrei!'
         }
         function sair(){            
-            area.innerText='Já de Saida!';
-            area.style.background ='green';
+            area.innerText='Já de Saida!'
+            area.style.background ='green'            
         }
     </script>
 </body>
