--- a/Aula10/ex007.html
+++ b/Aula10/ex007.html
@@ -23,16 +23,17 @@
     <input type="number" name="txtn2" id="txtn2">
     <input type="button" value="Somar" onclick="somar()">
     <div id="res">Resultado</div>
+    
     <script>
         function somar(){
-         var txtn1 = window.document.getElementById('txtn1'); 
+         var txtn1 = window.document.getElementById('txtn1');
          var txtn2 = window.document.querySelector('input#txtn2')
-         ;
-         var res = window.document.getElementById('res');
-         var n1 = Number(txtn1.value);
-         var n2 = Number(txtn2.value);
-         var soma = n1 + n2;  
-         res.innerHTML = `O Resultado da soma de ${n1} com ${n2} é igual a <strong>${soma}</strong>`; 
+         
+         var res = window.document.getElementById('res')
+         var n1 = Number(txtn1.value)
+         var n2 = Number(txtn2.value)
+         var soma = n1 + n2  
+         res.innerHTML = `O Resultado da soma de ${n1} com ${n2} é igual a <strong>${soma}</strong>` 
         }
     </script>
 </body>
