Exercicio02 - Aula14 - Tabuada

--- a/Aula14EX/ex017/modelo.html
+++ b/Aula14EX/ex017/modelo.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     
     <section>
         <div>
-            testando
+            <label for="txtnum">Número:</label>
+            <input type="number" name="txtnum" id="txtnum">
+            <input type="button" name="calc" id="calc" value="Gerar Tabuada">
         </div>
         <div>
-            Olá!
+            <select name="" id="" size="10">
+
+            </select>
         </div>
     </section>
 
