Exercicio02 - Aula14 - Tabuada

--- a/Aula14EX/ex017/modelo.html
+++ b/Aula14EX/ex017/modelo.html
@@ -15,10 +15,10 @@
         <div>
             <label for="txtnum">Número:</label>
             <input type="number" name="txtnum" id="txtnum">
-            <input type="button" name="calc" id="calc" value="Gerar Tabuada">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()">
         </div>
         <div>
-            <select name="" id="" size="10">
+            <select name="tabuada" id="seltab">
 
             </select>
         </div>
