--- a/Aula14EX/ex017/modelo.html
+++ b/Aula14EX/ex017/modelo.html
@@ -18,7 +18,7 @@
             <input type="button" value="Gerar Tabuada" onclick="tabuada()">
         </div>
         <div>
-            <select name="tabuada" id="seltab">
+            <select name="tabuada" id="seltab" size="10">
 
             </select>
         </div>
