--- a/Aula14EX/ex017/modelo.html
+++ b/Aula14EX/ex017/modelo.html
@@ -19,7 +19,7 @@
         </div>
         <div>
             <select name="tabuada" id="seltab" size="10">
-
+                <option> Digite o número: </option>
             </select>
         </div>
     </section>
