Exercicio02 - Aula14 - Tabuada While

--- a/Aula14EX/ex017/modelo.html
+++ b/Aula14EX/ex017/modelo.html
@@ -19,7 +19,9 @@
         </div>
         <div>
             <select name="tabuada" id="seltab" size="10">
-                <option> Digite o número: </option>
+                <option> </option>
+                <option> Digite o Número </option>
+                <option>Acima</option>
             </select>
         </div>
     </section>
