Desafios em JavaScript

--- a/Desafios/Modelo/desafio.html
+++ b/Desafios/Modelo/desafio.html
@@ -13,15 +13,15 @@
     
     <section>
         <div>
-            testando
+            Desafio??????
         </div>
         <div>
-            Olá!
+            Vamos tentar resolver!
         </div>
     </section>
 
     <footer>
-        <p>&copy; CursoemVideo</p>
+        <p>&copy; Filipe Gaspar </p>
     </footer>
     <script src="script.js"></script>
 </body>
