Exercicio - Aula16 - HTML page

--- a/Aula16ex/ex018/modelo.html
+++ b/Aula16ex/ex018/modelo.html
@@ -13,7 +13,9 @@
     
     <section>
         <div>
-            
+            <p>
+                Número de 1 a 100: <input type="number" id="txtnum" name="txtnum"><input type="button" value="Adicionar">
+            </p>
         </div>
         <div>
             Olá!
