Exercicio - Aula16 - HTML page

--- a/Aula16ex/ex018/modelo.html
+++ b/Aula16ex/ex018/modelo.html
@@ -14,11 +14,18 @@
     <section>
         <div>
             <p>
-                Número de 1 a 100: <input type="number" id="txtnum" name="txtnum"><input type="button" value="Adicionar">
+                Número de 1 a 100: 
+                <input type="number" id="txtnum" name="txtnum">
+                <input type="button" value="Adicionar">
             </p>
+            <P>
+                <select name="selnum" id="selnum">
+
+                </select>
+            </P>
         </div>
         <div>
-            Olá!
+           
         </div>
     </section>
 
