Exercicio - Aula16 - HTML page

--- a/Aula16ex/ex018/modelo.html
+++ b/Aula16ex/ex018/modelo.html
@@ -21,8 +21,11 @@
             <P>
                 <select name="selnum" id="selnum">
 
-                </select>
+                </select>               
             </P>
+            <p>
+                <input type="button" value="Finalizar"> 
+            </p>
         </div>
         <div>
            
