Exercicio - Aula16 - HTML - JS

--- a/Aula16ex/ex018/modelo.html
+++ b/Aula16ex/ex018/modelo.html
@@ -16,7 +16,7 @@
             <p>
                 Número de 1 a 100: 
                 <input type="number" id="txtnum" name="txtnum">
-                <input type="button" value="Adicionar">
+                <input type="button" value="Adicionar" onclick="add()">
             </p>
             <P>
                 <select name="selnum" id="selnum">
@@ -24,7 +24,7 @@
                 </select>               
             </P>
             <p>
-                <input type="button" value="Finalizar"> 
+                <input type="button" value="Finalizar" onclick="fim()"> 
             </p>
         </div>
         <div>
