--- a/Aula16ex/ex018/modelo.html
+++ b/Aula16ex/ex018/modelo.html
@@ -16,7 +16,7 @@
             <p>
                 Número de 1 a 100: 
                 <input type="number" id="txtnum" name="txtnum">
-                <input type="button" value="Adicionar" onclick="add()">
+                <input type="button" value="Adicionar" onclick="adic()">
             </p>
             <P>
                 <select name="selnum" id="selnum">
@@ -27,7 +27,7 @@
                 <input type="button" value="Finalizar" onclick="fim()"> 
             </p>
         </div>
-        <div>
+        <div id="result">
            
         </div>
     </section>
