--- a/Aula16ex/ex018/modelo.html
+++ b/Aula16ex/ex018/modelo.html
@@ -19,7 +19,7 @@
                 <input type="button" value="Adicionar" onclick="adic()">
             </p>
             <P>
-                <select name="selnum" id="selnum">
+                <select name="selnum" id="selnum" size="6">
 
                 </select>               
             </P>
