--- a/Aula16ex/ex018Prof/modelo.html
+++ b/Aula16ex/ex018Prof/modelo.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio!</title>
+    <title>Analizador de Números - Solução do CEV</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Analizador de Números</h1>
     </header>
     
     <section>
         <div>
-            testando
+            Número (entre 1 e 100):
+            <input type="number" name="fnum" id="fnum">
+            <input type="button" value="Adicionar">
+            <br><br>
+            <select name="flista" id="flista" size="6"></select>
+            <br>
+            <input type="button" value="Finalizar">
         </div>
-        <div>
-            Olá!
+        <div id="res">
+          
         </div>
     </section>
 
