Exercicio - Aula16 - A Minha Solução

--- a/Aula16ex/ex018/modelo.html
+++ b/Aula16ex/ex018/modelo.html
@@ -32,7 +32,7 @@
     </section>
 
     <footer>
-        <p>&copy; CursoemVideo</p>
+        <p>&copy; CursoemVideo JavaScript</p>
     </footer>
     <script src="script.js"></script>
 </body>
