--- a/Desafios/Desafio01/desafio.html
+++ b/Desafios/Desafio01/desafio.html
@@ -6,23 +6,7 @@
     <title>Modelo Para os Desafios!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
-    <header>
-        <h1>Título</h1>
-    </header>
-    
-    <section>
-        <div>
-            Desafio??????
-        </div>
-        <div>
-            Vamos tentar resolver!
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; Filipe Gaspar </p>
-    </footer>
-    <script src="script.js"></script>
+<body>   
+    <script>alert('Olá Mundo')</script>
 </body>
 </html>
