--- a/Desafios/Desafio01/desafio.html
+++ b/Desafios/Desafio01/desafio.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo Para os Desafios!</title>
+    <title>Desafio 01</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>   
-    <script>alert('Olá Mundo')</script>
+<body>
+        <script>alert('Olá Mundo')</script>        
 </body>
 </html>
