--- a/Desafios/Desafio02/desafio.html
+++ b/Desafios/Desafio02/desafio.html
@@ -8,10 +8,10 @@
 </head>
 <body>
         <script>
-            let num1 = prompt('Insira o primeiro Número: ')
-            let num2 = prompt('Insira o Segundo Número: ')
-            let num3 = pronpt ('Insira o Terceiro Número:')
-            let media = (Number(num1.value) + num2 + num3)/3
+            let num1 = window.prompt('Insira o Primeiro Número: ')
+            let num2 = window.prompt('Insira o Segundo Número: ')
+            let num3 = window.prompt('Insira o Terceiro Número: ')
+            let media = (Number(num1) + Number(num2) + Number(num3)) /3
             alert(`A Média dos seguintes números ${num1}; ${num2} e ${num3} é ${media}`)
         </script>        
 </body>
