--- a/Desafios/Desafio03/desafio.html
+++ b/Desafios/Desafio03/desafio.html
@@ -9,6 +9,12 @@
 <body>
         <script>
            let idade = prompt('Introdusa a sua Idade')
+           idade = Number(idade)
+           if(idade <18){
+               alerte (`Tem ${idade} anos logo é Menor de Idade`)
+           }else{
+               alert(`Tem ${idade} anos logo é Maior de Idade`)
+           }
         </script>        
 </body>
 </html>
