--- a/Desafios/Desafio04/desafio.html
+++ b/Desafios/Desafio04/desafio.html
@@ -6,5 +6,11 @@
     <title>Desafio 04</title>
 </head>
 <body>
+    <script>
+        let num1 = prompt('Insira o Primeiro Número')
+        let num2 = prompt('Insira o segundo Número')
+        let num3 = prompt('Insira o Terceiro Número')
+        
+    </script> 
 </body>
 </html>
