--- a/Desafios/Desafio04/desafio.html
+++ b/Desafios/Desafio04/desafio.html
@@ -15,12 +15,21 @@
 
         if(Number(num2)>maior && Number(num2)>Number(num3)){
             maior = Number(num2)
-        }else if(Number(num3)>maior && Number(num2)<Number(num3)){
+        }else if(Number(num3)>maior && Number(num3)>Number(num2)){
             maior=Number(num3)
         }else{
             maior= Number(num1)
         }
         alert(`O Maior entre ${Number(num1)}, ${Number(num2)} e ${Number(num3)} é: ${maior}`)
+        
+        if(Number(num2)<menor && Number(num2)<Number(num3)){
+            menor= Number(num2)
+        }else if(Number(num3)<menor && Number(num3)<Number(num2)){
+            menor = Number(num3)
+        }else{
+            menor = Number(num1)
+        }
+        
     </script> 
 </body>
 </html>
