--- a/Desafios/Desafio04/desafio.html
+++ b/Desafios/Desafio04/desafio.html
@@ -29,7 +29,9 @@
         }else{
             menor = Number(num1)
         }
-        
+        alert(`O Menor entre ${Number(num1)}, ${Number(num2)} e ${Number(num3)} é: ${maior}`)
+         
+
     </script> 
 </body>
 </html>
